Fixing carousel spacing issue on small screens.

--- a/web/stylesheets/media-queries.css
+++ b/web/stylesheets/media-queries.css
@@ -206,7 +206,7 @@
   .main-content { padding: 0; }
   nav.topbar { margin-top: 0; }
   
-/*   .image-wrap { height: 20.0rem; } */
+  .image-wrap { height: 13.0rem; }
   
   /*  Homepage slider size  */
   .image { width: 41.4rem; height: 9.5rem; }
